@@ -33,7 +33,7 @@ import java.util.Iterator;
 import java.util.List;
 
 /**
- * Accumulates statistics separated by a slot number.
+ * Accumulates statistics separated by a slot number. 
  * There is a separate statistic per slot. The slot is usually an ordinal into a set of values, e.g. tracking a count
  * frequency <em>per term</em>.
  * Sometimes there doesn't need to be a slot distinction, in which case there is just one nominal slot.
@@ -46,8 +46,7 @@ public abstract class SlotAcc implements Closeable {
     this.fcontext = fcontext;
   }
 
-  public void setNextReader(LeafReaderContext readerContext) throws IOException {
-  }
+  public void setNextReader(LeafReaderContext readerContext) throws IOException {}
 
   public abstract void collect(int doc, int slot) throws IOException;
 
@@ -61,7 +60,7 @@ public abstract class SlotAcc implements Closeable {
     int segBase = 0;
     int segMax;
     int adjustedMax = 0;
-    for (DocIterator docsIt = docs.iterator(); docsIt.hasNext(); ) {
+    for (DocIterator docsIt = docs.iterator(); docsIt.hasNext();) {
       final int doc = docsIt.nextDoc();
       if (doc >= adjustedMax) {
         do {
@@ -78,11 +77,10 @@ public abstract class SlotAcc implements Closeable {
         setNextReader(ctx);
       }
       count++;
-      collect(doc - segBase, slot);  // per-seg collectors
+      collect(doc - segBase, slot); // per-seg collectors
     }
     return count;
   }
-
 
   public abstract int compare(int slotA, int slotB);
 
@@ -101,8 +99,7 @@ public abstract class SlotAcc implements Closeable {
   public abstract void resize(Resizer resizer);
 
   @Override
-  public void close() throws IOException {
-  }
+  public void close() throws IOException {}
 
   public static abstract class Resizer {
     public abstract int getNewSize();
@@ -181,15 +178,14 @@ abstract class FuncSlotAcc extends SlotAcc {
   }
 }
 
-
-// have a version that counts the number of times a Slot has been hit?  (for avg... what else?)
+// have a version that counts the number of times a Slot has been hit? (for avg... what else?)
 
 // TODO: make more sense to have func as the base class rather than double?
 // double-slot-func -> func-slot -> slot -> acc
 // double-slot-func -> double-slot -> slot -> acc
 
 abstract class DoubleFuncSlotAcc extends FuncSlotAcc {
-  double[] result;  // TODO: use DoubleArray
+  double[] result; // TODO: use DoubleArray
   double initialValue;
 
   public DoubleFuncSlotAcc(ValueSource values, FacetContext fcontext, int numSlots) {
@@ -210,7 +206,6 @@ abstract class DoubleFuncSlotAcc extends FuncSlotAcc {
     return Double.compare(result[slotA], result[slotB]);
   }
 
-
   @Override
   public Object getValue(int slot) {
     return result[slot];
@@ -228,7 +223,7 @@ abstract class DoubleFuncSlotAcc extends FuncSlotAcc {
 }
 
 abstract class IntSlotAcc extends SlotAcc {
-  int[] result;  // use LongArray32
+  int[] result; // use LongArray32
   int initialValue;
 
   public IntSlotAcc(FacetContext fcontext, int numSlots, int initialValue) {
@@ -261,15 +256,13 @@ abstract class IntSlotAcc extends SlotAcc {
   }
 }
 
-
-
 class SumSlotAcc extends DoubleFuncSlotAcc {
   public SumSlotAcc(ValueSource values, FacetContext fcontext, int numSlots) {
     super(values, fcontext, numSlots);
   }
 
   public void collect(int doc, int slotNum) throws IOException {
-    double val = values.doubleVal(doc);  // todo: worth trying to share this value across multiple stats that need it?
+    double val = values.doubleVal(doc); // todo: worth trying to share this value across multiple stats that need it?
     result[slotNum] += val;
   }
 }
@@ -287,8 +280,6 @@ class SumsqSlotAcc extends DoubleFuncSlotAcc {
   }
 }
 
-
-
 class MinSlotAcc extends DoubleFuncSlotAcc {
   public MinSlotAcc(ValueSource values, FacetContext fcontext, int numSlots) {
     super(values, fcontext, numSlots, Double.NaN);
@@ -297,10 +288,10 @@ class MinSlotAcc extends DoubleFuncSlotAcc {
   @Override
   public void collect(int doc, int slotNum) throws IOException {
     double val = values.doubleVal(doc);
-    if (val == 0 && !values.exists(doc)) return;  // depend on fact that non existing values return 0 for func query
+    if (val == 0 && !values.exists(doc)) return; // depend on fact that non existing values return 0 for func query
 
     double currMin = result[slotNum];
-    if (!(val >= currMin)) {  // val>=currMin will be false for staring value: val>=NaN
+    if (!(val >= currMin)) { // val>=currMin will be false for staring value: val>=NaN
       result[slotNum] = val;
     }
   }
@@ -314,16 +305,15 @@ class MaxSlotAcc extends DoubleFuncSlotAcc {
   @Override
   public void collect(int doc, int slotNum) throws IOException {
     double val = values.doubleVal(doc);
-    if (val == 0 && !values.exists(doc)) return;  // depend on fact that non existing values return 0 for func query
+    if (val == 0 && !values.exists(doc)) return; // depend on fact that non existing values return 0 for func query
 
     double currMax = result[slotNum];
-    if (!(val <= currMax)) {  // reversed order to handle NaN
+    if (!(val <= currMax)) { // reversed order to handle NaN
       result[slotNum] = val;
     }
   }
 
 }
-
 
 class AvgSlotAcc extends DoubleFuncSlotAcc {
   int[] counts;
@@ -336,7 +326,7 @@ class AvgSlotAcc extends DoubleFuncSlotAcc {
   @Override
   public void reset() {
     super.reset();
-    for (int i=0; i<counts.length; i++) {
+    for (int i = 0; i < counts.length; i++) {
       counts[i] = 0;
     }
   }
@@ -351,11 +341,12 @@ class AvgSlotAcc extends DoubleFuncSlotAcc {
   }
 
   private double avg(double tot, int count) {
-    return count==0 ? 0 : tot/count;  // returns 0 instead of NaN.. todo - make configurable? if NaN, we need to handle comparisons though...
+    return count == 0 ? 0 : tot / count; // returns 0 instead of NaN.. todo - make configurable? if NaN, we need to
+                                         // handle comparisons though...
   }
 
   private double avg(int slot) {
-    return avg(result[slot], counts[slot]);  // calc once and cache in result?
+    return avg(result[slot], counts[slot]); // calc once and cache in result?
   }
 
   @Override
@@ -367,8 +358,8 @@ class AvgSlotAcc extends DoubleFuncSlotAcc {
   public Object getValue(int slot) {
     if (fcontext.isShard()) {
       ArrayList lst = new ArrayList(2);
-      lst.add( counts[slot] );
-      lst.add( result[slot] );
+      lst.add(counts[slot]);
+      lst.add(result[slot]);
       return lst;
     } else {
       return avg(slot);
@@ -382,32 +373,157 @@ class AvgSlotAcc extends DoubleFuncSlotAcc {
   }
 }
 
+class VarianceSlotAcc extends DoubleFuncSlotAcc {
+  int[] counts;
+  double[] sum;
+
+  public VarianceSlotAcc(ValueSource values, FacetContext fcontext, int numSlots) {
+    super(values, fcontext, numSlots);
+    counts = new int[numSlots];
+    sum = new double[numSlots];
+  }
+
+  @Override
+  public void reset() {
+    super.reset();
+    Arrays.fill(counts, 0);
+    Arrays.fill(sum, 0);
+  }
+
+  @Override
+  public void resize(Resizer resizer) {
+    super.resize(resizer);
+    this.counts = resizer.resize(this.counts, 0);
+    this.sum = resizer.resize(this.sum, 0);
+  }
+
+  private double variance(double sumSq, double sum, int count) {
+    double val = count == 0 ? 0 : (sumSq / count) - Math.pow(sum / count, 2);
+    return val;
+  }
+
+  private double variance(int slot) {
+    return variance(result[slot], sum[slot], counts[slot]); // calc once and cache in result?
+  }
+
+  @Override
+  public int compare(int slotA, int slotB) {
+    return Double.compare(this.variance(slotA), this.variance(slotB));
+  }
+
+  @Override
+  public Object getValue(int slot) {
+    if (fcontext.isShard()) {
+      ArrayList lst = new ArrayList(3);
+      lst.add(counts[slot]);
+      lst.add(result[slot]);
+      lst.add(sum[slot]);
+      return lst;
+    } else {
+      return this.variance(slot);
+    }
+  }
+
+  @Override
+  public void collect(int doc, int slot) throws IOException {
+    double val = values.doubleVal(doc);
+    if (values.exists(doc)) {
+      counts[slot]++;
+      result[slot] += val * val;
+      sum[slot] += val;
+    }
+  }
+}
+
+class StddevSlotAcc extends DoubleFuncSlotAcc {
+  int[] counts;
+  double[] sum;
+
+  public StddevSlotAcc(ValueSource values, FacetContext fcontext, int numSlots) {
+    super(values, fcontext, numSlots);
+    counts = new int[numSlots];
+    sum = new double[numSlots];
+  }
+
+  @Override
+  public void reset() {
+    super.reset();
+    Arrays.fill(counts, 0);
+    Arrays.fill(sum, 0);
+  }
+
+  @Override
+  public void resize(Resizer resizer) {
+    super.resize(resizer);
+    this.counts = resizer.resize(this.counts, 0);
+    this.result = resizer.resize(this.result, 0);
+  }
+
+  private double stdDev(double sumSq, double sum, int count) {
+    double val = count == 0 ? 0 : Math.sqrt((sumSq / count) - Math.pow(sum / count, 2)); 
+    return val;
+  }
+
+  private double stdDev(int slot) {
+    return stdDev(result[slot], sum[slot], counts[slot]); // calc once and cache in result?
+  }
+
+  @Override
+  public int compare(int slotA, int slotB) {
+    return Double.compare(this.stdDev(slotA), this.stdDev(slotB));
+  }
+
+  @Override
+  public Object getValue(int slot) {
+    if (fcontext.isShard()) {
+      ArrayList lst = new ArrayList(3);
+      lst.add(counts[slot]);
+      lst.add(result[slot]);
+      lst.add(sum[slot]);
+      return lst;
+    } else {
+      return this.stdDev(slot);
+    }
+  }
+
+  @Override
+  public void collect(int doc, int slot) throws IOException {
+    double val = values.doubleVal(doc);
+    if (values.exists(doc)) {
+      counts[slot]++;
+      result[slot] += val * val;
+      sum[slot] += val;
+    }
+  }
+}
+
 abstract class CountSlotAcc extends SlotAcc {
   public CountSlotAcc(FacetContext fcontext) {
     super(fcontext);
   }
 
   public abstract void incrementCount(int slot, int count);
+
   public abstract int getCount(int slot);
 }
 
-
-
 class CountSlotArrAcc extends CountSlotAcc {
   int[] result;
+
   public CountSlotArrAcc(FacetContext fcontext, int numSlots) {
     super(fcontext);
     result = new int[numSlots];
   }
 
   @Override
-  public void collect(int doc, int slotNum) {       // TODO: count arrays can use fewer bytes based on the number of docs in the base set (that's the upper bound for single valued) - look at ttf?
+  public void collect(int doc, int slotNum) { // TODO: count arrays can use fewer bytes based on the number of docs in
+                                              // the base set (that's the upper bound for single valued) - look at ttf?
     result[slotNum]++;
   }
 
   @Override
   public int compare(int slotA, int slotB) {
-    return Integer.compare( result[slotA], result[slotB] );
+    return Integer.compare(result[slotA], result[slotB]);
   }
 
   @Override
@@ -438,7 +554,6 @@ class CountSlotArrAcc extends CountSlotAcc {
     resizer.resize(result, 0);
   }
 }
-
 
 class SortSlotAcc extends SlotAcc {
   public SortSlotAcc(FacetContext fcontext) {
